# globant_challenge

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: aws_helpers.py  db.py  main.py  models.py
app/api/: metrics.py  upload.py
docs/data/: hired_employees.csv
