[tool.poetry]
name = "globant-challenge"
version = "0.1.0"
description = "Globant's Data Engineer Challenge"
authors = ["nmema <nicolas.a.mema@gmail.com>"]
readme = "README.md"
packages = [
    { include = "source" },
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"


[tool.poetry.group.api.dependencies]
fastapi = "^0.102.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
