[tool.poetry]
name = "globant-challenge"
version = "0.1.0"
description = "Globant's Data Engineer Challenge"
authors = ["nmema <nicolas.a.mema@gmail.com>"]
readme = "README.md"
packages = [
    { include = "source" },
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pylint = "^2.17.5"
ipykernel = "^6.25.1"
requests = "^2.31.0"


[tool.poetry.group.api.dependencies]
fastapi = "^0.102.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
boto3 = "^1.28.36"
psycopg2-binary = "^2.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
